--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <span class="ball"></span>
   </div>
 
+  <div class="teamname">  
+      
+  </div>
+
   <div class="phone" id="phone">
     <div class="header" id="chatHeader">
       <img src="img/profile.png" alt="" id="profile_pic">
@@ -37,7 +41,7 @@
             <div class="lock-subtext">Europe/Berlin</div>
           </div>
 
-          <h2>!Die Zahl der Fenster ist halb so groß wie die Zahl der Tische.<br><br>Es gibt 2 Fenster mehr als Türen.<br><br>Die Zahl der Stühle ist dreifach so groß wie die Zahl der Fenster.<br><br>Es stehen 6 Tische im Raum.</h2>
+          <h2>Die Zahl der Fenster ist halb so groß wie die Zahl der Tische.<br><br>Es gibt 2 Fenster mehr als Türen.<br><br>Die Zahl der Stühle ist dreifach so groß wie die Zahl der Fenster.<br><br>Es stehen 6 Tische im Raum.</h2>
           <div class="pin-dots" id="pinDots">
             <span class="dot"></span>
             <span class="dot"></span>
