--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GabelSMP.Net - Minecraft Server</title>
+    <link rel="icon" type="image/png" href="img/logo_big.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <img src="img/logo.png" alt="GabelSMP Logo" class="logo">
             </div>
             <h1 class="title">GabelSMP.Net</h1>
-            <p class="subtitle">Tritt unserem Minecraft-Server bei!</p>
+            <p class="subtitle">Join my Minecraft Server now!</p>
         </header>
 
         <!-- Main Content -->
@@ -27,26 +28,26 @@
                         <span id="ipText">GabelSMP.Net</span>
                         <span class="copy-icon">📋</span>
                     </div>
-                    <p class="copy-hint">Klick zum Kopieren</p>
+                    <p class="copy-hint">Click to Copy</p>
                 </div>
             </section>
 
             <!-- Social Media Section -->
             <section class="social-section">
-                <a href="https://discord.gg/" class="social-btn discord-btn" target="_blank">
+                <a href="https://discord.gg/GQ6F5CACBx" class="social-btn discord-btn" target="_blank">
                     <img src="img/discord.png" alt="Discord" class="button-icon">
-                    Discord beitreten
+                    join Discord
                 </a>
-                <a href="https://www.twitch.tv/" class="social-btn twitch-btn" target="_blank">
+                <a href="https://www.twitch.tv/germangabelgames_hd" class="social-btn twitch-btn" target="_blank">
                     <img src="img/twitch.png" alt="Twitch" class="button-icon">
-                    Twitch beitreten
+                         follow me on Twitch
                 </a>
-                <a href="https://www.youtube.com/" class="social-btn youtube-btn" target="_blank">
-                    YouTube abonnieren
+                <a href="https://www.youtube.com/@germangabelgames" class="social-btn youtube-btn" target="_blank">
+                    follow me on YouTube
                 </a>
-                <a href="https://www.tiktok.com/" class="social-btn tiktok-btn" target="_blank">
+                <a href="https://www.tiktok.com/@germangabelgames_hd" class="social-btn tiktok-btn" target="_blank">
                     <img src="img/tiktok.png" alt="TikTok" class="button-icon">
-                    TikTok folgen
+                    follow me on TikTok
                 </a>
             </section>
 
@@ -56,18 +57,18 @@
                 <div class="features-grid">
                     <div class="feature-card">
                         <span class="feature-icon">⚔️</span>
-                        <h3>Vanilla Survival</h3>
-                        <p>Reines Vanilla-Spielerlebnis</p>
+                        <h3>Minecraft SMP</h3>
+                        <p>Fun PVP based SMP</p>
+                    </div>
+                    <div class="feature-card">
+                        <span class="feature-icon">📷</span>
+                        <h3>F2P</h3>
+                        <p>earn premium with twitch channel points</p>
                     </div>
                     <div class="feature-card">
                         <span class="feature-icon">👥</span>
                         <h3>Community</h3>
-                        <p>Freundliche Spieler-Community</p>
-                    </div>
-                    <div class="feature-card">
-                        <span class="feature-icon">🎯</span>
-                        <h3>Abenteuer</h3>
-                        <p>Spannende Quests und Events</p>
+                        <p>Very nice community and very good support!</p>
                     </div>
                 </div>
             </section>
@@ -100,22 +101,19 @@
                 <h3>Angaben gemäß § 5 TMG</h3>
                 <p>
                     <strong>Betreiber:</strong><br>
-                    GabelSMP<br>
-                    [Deine Adresse]<br>
-                    [Postleitzahl] [Stadt]<br>
+                    GermanGabelGames<br>
                     Deutschland
                 </p>
                 
                 <h3>Kontakt</h3>
                 <p>
-                    <strong>E-Mail:</strong> [Deine E-Mail]
+                    <strong>E-Mail:</strong> germangabelgames@gmail.com
                 </p>
 
                 <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h3>
                 <p>
-                    [Dein Name]<br>
-                    [Deine Adresse]<br>
-                    [Postleitzahl] [Stadt]
+                    GermanGabelGames<br>
+                    Deutschland
                 </p>
 
                 <h3>Haftungsausschluss</h3>
